--- a/styles.css
+++ b/styles.css
@@ -3,20 +3,36 @@
  }
 
  .container {
-     display: flex;
-     flex-direction: column;
-     justify-content: center;
-     align-items: center;
+     width: 420px;
+     padding: 20px 24px;
  }
 
  .control-group {
-     display: flex;
-     flex-direction: column;
-     align-items: flex-start;   
+     display: grid;
+     grid-template-columns: 140px 1fr;
+     gap: 6px 12px;
+     margin-bottom: 20px;
+     align-items: center;
  }
 
- .item {
-     flex: none;
+ .inline {
+     display: flex;
+     gap: 4px;
+     align-items: center;
+ }
+
+ .output-group {
+     display: grid;
+     grid-template-columns: 1fr auto;
+     row-gap: 8px;
+     column-gap: 16px;
+     font-weight: 600;
+ }
+
+
+ .output-group .val {
+     text-align: left;
+     font-variant-numeric: tabular-nums;
  }
 
  :root {
@@ -25,13 +41,16 @@
 
  body {
      padding: 10px;
-     
      color: light-dark(#292524, #BCBDD0);
      background-color: light-dark(#fcfcfc, #161923);
+     display: flex;
+     align-items: center;
+     justify-content: center;
+
  }
 
  input,
  select {
      margin: 5px;
-     color: light-dark(#597700,#FFCA57);
+     color: light-dark(#597700, #FFCA57);
  }
