--- a/styles.css
+++ b/styles.css
@@ -58,3 +58,19 @@
      margin: 5px;
      color: light-dark(var(--highlight-color-light), var(--highlight-color-dark));
  }
+
+ .credits {
+     font-size: x-small;
+     color: light-dark(var(--font-color-light), var(--font-color-dark));
+     margin-top: 20px;
+ }
+
+ a:link {
+     text-decoration: none;
+     color: light-dark(var(--highlight-color-light), var(--highlight-color-dark));;
+ }
+
+ a:visited {
+     text-decoration: none;
+     color: light-dark(var(--highlight-color-light), var(--highlight-color-dark));;
+ }
